force-app/main/default/objects/Comm_Log__c/Comm_Log__c.object-meta.xml
<CustomObject>
    <label>Comm Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Comm Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comm Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>