force-app/main/default/objects/Comm_Log__c/fields/Bounce_Description__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Description__c</fullName>
    <label>Bounce Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>