force-app/main/default/objects/Comm_Log__c/fields/Bounce_Type__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Type__c</fullName>
    <label>Bounce Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>