force-app/main/default/objects/Comm_Log__c/fields/Bounced_At__c.field-meta.xml
<CustomField>
    <fullName>Bounced_At__c</fullName>
    <label>Bounced At</label>
    <type>DateTime</type>
</CustomField>