force-app/main/default/objects/Comm_Log__c/fields/Click_Count__c.field-meta.xml
<CustomField>
    <fullName>Click_Count__c</fullName>
    <label>Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>