force-app/main/default/objects/Comm_Log__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <label>Delivery Mode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>