force-app/main/default/objects/Comm_Log__c/fields/Last_Modified_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_At__c</fullName>
    <label>Last Modified At</label>
    <type>DateTime</type>
</CustomField>