force-app/main/default/objects/Comm_Log__c/fields/Last_Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Opened_At__c</fullName>
    <label>Last Opened At</label>
    <type>DateTime</type>
</CustomField>