force-app/main/default/objects/Comm_Log__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>RFC or provider message identifier used for inbound reply threading.</description>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>