force-app/main/default/objects/Comm_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comm Logs</relationshipLabel>
    <relationshipName>Comm_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>