force-app/main/default/objects/Comm_Log__c/fields/Parent_Comm_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comm_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Comm Log</label>
    <referenceTo>Comm_Log__c</referenceTo>
    <relationshipLabel>Comm Logs</relationshipLabel>
    <relationshipName>Comm_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>