force-app/main/default/objects/Comm_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Log__c</fullName>
    <label>Parent Log</label>
    <referenceTo>Comm_Log__c</referenceTo>
    <relationshipLabel>Child Comm Logs</relationshipLabel>
    <relationshipName>Child_Comm_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>