force-app/main/default/objects/Comm_Log__c/fields/Postmark_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Postmark_Message_Id__c</fullName>
    <label>Postmark Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>