force-app/main/default/objects/Comm_Log__c/fields/Send_Method__c.field-meta.xml
<CustomField>
    <fullName>Send_Method__c</fullName>
    <label>Send Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native Salesforce</fullName>
            </value>
            <value>
                <fullName>Postmark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>