force-app/main/default/objects/Comm_Log__c/fields/Spam_Reported_At__c.field-meta.xml
<CustomField>
    <fullName>Spam_Reported_At__c</fullName>
    <label>Spam Reported At</label>
    <type>DateTime</type>
</CustomField>