force-app/main/default/objects/Comm_Log__c/fields/WA_Template__c.field-meta.xml
<CustomField>
    <fullName>WA_Template__c</fullName>
    <label>WA Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>